--- a/package.json
+++ b/package.json
@@ -35,8 +35,9 @@
     "flux": "^2.1.1",
     "immutable": "^3.8.1",
     "mocha": "^2.4.5",
-    "react": "^15.0.2",
-    "react-dom": "^15.0.2",
+    "react": "^15.3.2",
+    "react-addons-css-transition-group": "^15.3.2",
+    "react-dom": "^15.3.2",
     "seedrandom": "^2.4.2",
     "uglify-js": "^2.6.2"
   }
