--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^15.3.2",
     "react-addons-css-transition-group": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-ga": "^2.1.2",
     "seedrandom": "^2.4.2",
     "uglify-js": "^2.6.2"
   }
