--- a/package.json
+++ b/package.json
@@ -21,25 +21,34 @@
     "type": "git",
     "url": "git://github.com/prvak/flowers.git"
   },
+  "eslintConfig": {
+    "rules": {
+      "no-underscore-dangle": "off"
+    }
+  },
   "dependencies": {
-    "babel-cli": "^6.7.5",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babelify": "^7.3.0",
-    "browserify": "^13.0.0",
-    "chai": "^3.5.0",
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.4",
+    "babelify": "^10.0.0",
+    "browserify": "^16.2.3",
+    "chai": "^4.2.0",
     "chai-shallow-deep-equal": "^1.4.0",
-    "eslint": "^2.7.0",
-    "eslint-config-airbnb": "^6.2.0",
-    "eslint-plugin-react": "^4.3.0",
-    "flux": "^2.1.1",
-    "immutable": "^3.8.1",
-    "mocha": "^2.4.5",
-    "react": "^15.3.2",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.13.0",
+    "flux": "^3.1.3",
+    "immutable": "^4.0.0-rc.12",
+    "mocha": "^6.1.4",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
     "react-addons-css-transition-group": "^15.3.2",
-    "react-dom": "^15.3.2",
+    "react-dom": "^16.8.6",
     "react-ga": "^2.1.2",
-    "seedrandom": "^2.4.2",
-    "uglify-js": "^2.6.2"
+    "seedrandom": "^3.0.1",
+    "uglify-js": "^3.6.0"
   }
 }
